--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.7.0"
+    "graphql": "^15.7.0",
+    "mongoose": "^6.0.12"
   }
 }
